i have added new crud features for members,category and also improved on some files for the books

--- a/users/templates/users/navbar.html
+++ b/users/templates/users/navbar.html
@@ -29,12 +29,12 @@
           <a class="nav-link text-dark" href="{% url 'book_create' %}">Create Book</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark" href="{% url 'create_categories' %}">Create Category</a>
+          <a class="nav-link text-dark" href="{% url 'category_list' %}"> Category</a>
         </li>
 
 
         <li class="nav-item">
-          <a class="nav-link text-dark" href="{% url 'create_member' %}">Members</a>
+          <a class="nav-link text-dark" href="{% url 'list_members' %}">Members</a>
         </li>
 
         <li class="nav-item">
